# ChangeLog for media-libs/libkgeomap
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libkgeomap/ChangeLog,v 1.37 2013/08/06 09:54:49 kensington Exp $

  06 Aug 2013; Michael Palimaka <kensington@gentoo.org>
  -libkgeomap-3.0.0.ebuild, -libkgeomap-3.1.0.ebuild:
  Remove old.

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libkgeomap-3.2.0.ebuild:
  Stable for x86, wrt bug #473942

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libkgeomap-3.2.0.ebuild:
  Stable for amd64, wrt bug #473942

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> libkgeomap-3.1.0.ebuild:
  Stable for x86, wrt bug #470508

  19 May 2013; Agostino Sarubbo <ago@gentoo.org> libkgeomap-3.1.0.ebuild:
  Stable for amd64, wrt bug #470508

*libkgeomap-3.2.0 (18 May 2013)

  18 May 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  -libkgeomap-3.2.0_beta2.ebuild, +libkgeomap-3.2.0.ebuild:
  Version bump

*libkgeomap-3.2.0_beta2 (11 May 2013)

  11 May 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  -libkgeomap-2.9.0.ebuild, +libkgeomap-3.2.0_beta2.ebuild:
  Add beta version (without keywords)

  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libkgeomap-3.0.0.ebuild:
  Stable for x86, wrt bug #462890

  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libkgeomap-3.0.0.ebuild:
  Stable for amd64, wrt bug #462890

*libkgeomap-3.1.0 (29 Mar 2013)

  29 Mar 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +libkgeomap-3.1.0.ebuild:
  Version bump

*libkgeomap-3.0.0 (09 Feb 2013)

  09 Feb 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  -libkgeomap-3.0.0_rc.ebuild, +libkgeomap-3.0.0.ebuild:
  Version bump

*libkgeomap-3.0.0_rc (07 Feb 2013)

  07 Feb 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +libkgeomap-3.0.0_rc.ebuild:
  Version bump

  07 Feb 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  -libkgeomap-2.6.0.ebuild, -libkgeomap-2.7.0.ebuild, -libkgeomap-2.8.0.ebuild:
  Cleanup
