@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libkgeomap
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkgeomap/ChangeLog,v 1.37 2013/08/06 09:54:49 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkgeomap/ChangeLog,v 1.38 2013/08/07 10:56:21 dilfridge Exp $
+
+*libkgeomap-3.3.0 (07 Aug 2013)
+
+  07 Aug 2013; Andreas K. Huettel <dilfridge@gentoo.org>
+  +libkgeomap-3.3.0.ebuild:
+  Version bump
 
   06 Aug 2013; Michael Palimaka <kensington@gentoo.org>
   -libkgeomap-3.0.0.ebuild, -libkgeomap-3.1.0.ebuild:
